# rgb_lcd

./: .gitignore  sdkconfig.defaults
main/: CMakeLists.txt  idf_component.yml  main.c  ui.c  ui.h
main/fonts/: ui_font_montserrat_140.c  ui_font_montserrat_96.c
